# gator

./: .gitignore  .prettierignore  .prettierrc.ts  README.md  eslint.config.js  flake.nix  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: Root.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main-window.json  tray-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs
src-tauri/src/commands/: croc.rs  mod.rs  window.rs
src-tauri/src/commands/croc/: kill_croc_instance.rs  mod.rs  receive_files.rs  send_files.rs
src-tauri/src/commands/window/: mod.rs
src-tauri/src/config/: main_window.rs  mod.rs  tray.rs  window.rs
src-tauri/src/croc_sidecar/: child.rs  command.rs  event.rs  iter.rs  mod.rs  parser.rs  read_until_any.rs
src-tauri/src/utils/: window.rs
src/app/: App.vue  MainApp.vue  Root.vue  TrayApp.vue
src/app/main/: DecorationButton.vue  Decorations.vue  Window.vue  WindowControls.vue
src/app/tray/: Actions.vue  Window.vue
src/commands/: index.ts
src/commands/croc/: index.ts  listen-to-croc-events.ts
src/commands/main-window/: close.ts
src/commands/tray/: close.ts
src/components/: CopyCode.vue  Dropzone.vue  MenuButtons.vue  PasteCode.vue  ProgressBar.vue  TransferManager.vue  TrayButtons.vue
src/croc/: croc.ts  index.ts  transfer-state.ts
src/events/: index.ts
src/events/croc/: index.ts  kill-croc-instance.ts  listen-to-croc-events.ts  receive_files.ts  (+1 more)
src/utils/: debounce.ts  wait.ts
(+2 files in other folders)
